Created 2 caches for store and products.
Signed-off-by: alexalbu98 <alexalbu78@yahoo.com>